# recmd

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
recmd/: __init__.py  command.py  exceptions.py  map_result.py  patcher.py  shell.py  shell_patch.py  stream.py  template.py
recmd/executor/: abc.py  anyio.py  subprocess.py
tests/: test_executor_anyio.py  test_executor_subprocess.py  test_patcher.py  test_shell_patch.py  test_template.py  typing_command.py
